--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,10 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
+  # <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: sample_appli_production
   username: sample_appli
   password: <%= ENV['SAMPLE_APPLI_DATABASE_PASSWORD'] %>
